# rosstat_parser

./: .env  .env.example  .gitignore  docker-compose.yml
src/: backend.dockerfile  celery.dockerfile  celerybeat-schedule  pyproject.toml  worker_start.sh
src/apps/rosstat_parser/: admin.py  apps.py  models.py  tasks.py
src/apps/rosstat_parser/api/v1/services/: downloader.py  excel_writer.py  table_commands.py
src/apps/rosstat_parser/migrations/: 0001_initial.py  0002_alter_region_analytical_table.py  0003_alter_region_name.py  0004_alter_region_analytical_table.py
src/apps/rosstat_parser/templates/: region_changelist.html
src/config/: celery.py  settings.py  urls.py
