[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["kurkovnikita <zzznikurzzz@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0.2"
djangorestframework = "^3.14.0"
gunicorn = "^21.2.0"
psycopg2-binary = "^2.9.9"
loguru = "^0.7.2"
python-dotenv = "^1.0.1"
django-filter = "^23.5"
requests = "^2.31.0"
gevent = "^24.2.1"
celery = "^5.3.6"
redis = "^5.0.3"
django-extensions = "^3.2.3"
oauth2client = "^4.1.3"
bs4 = "^0.0.2"
selenium = "^4.35.0"
webdriver-manager = "^4.0.2"
pandas = "^2.3.3"
openpyxl = "3.0.10"
koala2 = "^0.0.35"
scipy = "^1.16.2"
django-celery-beat = "^2.8.1"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
